--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,7 @@ ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 RUN npm run build
 
 # Stage 2: Serve
-FROM nginx:1.23-alpine
+FROM nginx
 
 # Remove default nginx static files
 RUN rm -rf /usr/share/nginx/html/*
